// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonLink /> renders correctly \`disabled\` 1`] = `
<DocumentFragment>
  <a
    class="btn btn-secondary btn-lg disabled"
    disabled=""
    href=""
    role="button"
    tabindex="-1"
  >
    Button link
  </a>
</DocumentFragment>
`;

exports[`<ButtonLink /> renders correctly anchor attributes 1`] = `
<DocumentFragment>
  <a
    aria-label="SourceGraph.com"
    class="btn btn-secondary btn-lg"
    data-pressed="true"
    data-tooltip="SourceGraph.com"
    href="https://sourcegraph.com"
    tabindex="0"
  >
    Button link
  </a>
</DocumentFragment>
`;

exports[`<ButtonLink /> renders correctly btn classes 1`] = `
<DocumentFragment>
  <a
    class="btn btn-secondary btn-lg"
    href="http://example.com"
    tabindex="0"
  >
    Button link
  </a>
</DocumentFragment>
`;

exports[`<ButtonLink /> renders correctly empty \`to\` 1`] = `
<DocumentFragment>
  <a
    class="btn btn-secondary btn-lg"
    href=""
    role="button"
    tabindex="0"
  >
    Button link
  </a>
</DocumentFragment>
`;
